FIX: Scrollbar of filter now actually hidden lol

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,13 @@ body {background-color:#FAF9E6;}
 div {
   font-family: 'Alumni Sans', 'sans-serif';
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
